pagina-de-articulo

--- a/src/app/pages/inicio/articulos/articulos.component.html
+++ b/src/app/pages/inicio/articulos/articulos.component.html
@@ -24,7 +24,7 @@
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae accusamus voluptatum omnis non facere itaque aliquam temporibus, nisi pariatur facilis similique possimus eaque iure doloribus natus animi eos, suscipit eum!</p>
 
-                <button class="btn btn-dark btn-sm float-right">Leer más</button>
+                <button class="btn btn-dark btn-sm float-right" routerLink="articulo">Leer más</button>
 
             </div>
 
@@ -46,7 +46,7 @@
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae accusamus voluptatum omnis non facere itaque aliquam temporibus, nisi pariatur facilis similique possimus eaque iure doloribus natus animi eos, suscipit eum!</p>
 
-                <button class="btn btn-dark btn-sm float-right">Leer más</button>
+                <button class="btn btn-dark btn-sm float-right" routerLink="articulo">Leer más</button>
 
             </div>
 
@@ -68,7 +68,7 @@
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae accusamus voluptatum omnis non facere itaque aliquam temporibus, nisi pariatur facilis similique possimus eaque iure doloribus natus animi eos, suscipit eum!</p>
 
-                <button class="btn btn-dark btn-sm float-right">Leer más</button>
+                <button class="btn btn-dark btn-sm float-right" routerLink="articulo">Leer más</button>
 
             </div>
 
@@ -90,7 +90,7 @@
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae accusamus voluptatum omnis non facere itaque aliquam temporibus, nisi pariatur facilis similique possimus eaque iure doloribus natus animi eos, suscipit eum!</p>
 
-                <button class="btn btn-dark btn-sm float-right">Leer más</button>
+                <button class="btn btn-dark btn-sm float-right" routerLink="articulo">Leer más</button>
 
             </div>
 
