--- a/src/app/pages/articulo/articulo.component.html
+++ b/src/app/pages/articulo/articulo.component.html
@@ -1,1 +1,12 @@
+<article>
 
+	<div class="jumbotron jumbotron-fluid">
+	  <div class="container">
+	    <h1 class="display-4">Fluid jumbotron</h1>
+	    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+
+	    <button class="btn btn-primary" routerLink="">Regresar</button>
+	  </div>
+	</div>	
+
+</article>
