--- a/src/app/pages/inicio/articulos/articulos.component.html
+++ b/src/app/pages/inicio/articulos/articulos.component.html
@@ -22,7 +22,7 @@
 
                 <p>{{articulo.intro}}</p>
 
-                <button class="btn btn-dark btn-sm float-right" routerLink="articulo/{{articulo.id}}">Leer más</button>
+                <button class="btn btn-dark btn-sm float-right" routerLink="articulo/{{articulo.url}}">Leer más</button>
 
             </div>
 
