Formularios en Angular

--- a/src/app/pages/articulo/articulo.component.html
+++ b/src/app/pages/articulo/articulo.component.html
@@ -1,4 +1,38 @@
-<article>
+<!--=====================================
+Formulario de ingreso
+======================================-->
+
+<div class="signin text-center" *ngIf="!login">
+
+	<form class="form-signin was-validated" (ngSubmit)="onSubmit(f)" #f="ngForm" novalidate>
+
+		<h3 class="mb-3 font-weight-normal">Login</h3>
+
+		<div class="form-group">
+			
+			<input type="text" class="form-control mt-3" placeholder="Usuario" name="usuarioLogin" [(ngModel)]="usuario" required>
+
+			<div class="invalid-feedback">Este campo es obligatorio</div>
+
+		</div>
+
+		<div class="form-group">
+			
+			<input type="password" class="form-control mt-3" placeholder="Contraseña" name="passwordLogin" [(ngModel)]="password" #passwordLogin="ngModel" required>
+			
+			<div class="invalid-feedback">Este campo es obligatorio</div>
+
+		</div>
+
+		<div class="alert alert-danger">Usuario y contraseña no válidos</div>
+
+		<button class="btn btn-lg btn-primary btn-block mt-3">Ingresar</button>		
+
+	</form>
+
+</div>
+
+<article *ngIf="login">
 
 	<div class="jumbotron jumbotron-fluid">
 	  <div class="container">
